# Search-engine

./: CMakeLists.txt  README  document.cpp  document.h  icons.qrc  indexer.cpp  indexer.h  inode.cpp  inode.h  inodedata.cpp  inodedata.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  search-engine.pro  slistview.cpp  slistview.h  stopwords
